aae-6405 Fixed a failing test and minor refactoring
After cutting the loop on the ProcessInstanceBuilder and the RuntimeService a test was failing and it has been fixed.

While fixing the test, I performed some clean up refactoring.